[gd_scene load_steps=5 format=3 uid="uid://bv68f1qu7blvt"]

[ext_resource type="Script" path="res://scenes/environment/key/key.gd" id="1_6bvto"]
[ext_resource type="Texture2D" uid="uid://dkp7is6sf3j3l" path="res://scenes/environment/key/key.png" id="1_psvh4"]
[ext_resource type="AudioStream" uid="uid://uj5jmykb60w7" path="res://audio/key.mp3" id="3_3gi1q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nr6fw"]
size = Vector2(3, 7)

[node name="Key" type="Node2D"]
script = ExtResource("1_6bvto")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_psvh4")

[node name="InteractArea" type="Area2D" parent="Sprite2D" groups=["key"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/InteractArea"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_nr6fw")

[node name="KeyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3gi1q")
volume_db = -8.432

[connection signal="area_entered" from="Sprite2D/InteractArea" to="." method="_on_interact_area_area_entered"]
[connection signal="finished" from="KeyAudio" to="." method="_on_key_audio_finished"]
